src/ui/sass/trumbowyg.scss
/* ... */
.trumbowyg-modal-box {
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -250px;
    width: 500px;
    height: 275px;
    z-index: 1;
    background-color: #FFF;
    text-align: center;
    box-shadow: rgba(0, 0, 0, .2) 0 2px 3px;
    backface-visibility: hidden;

    .trumbowyg-modal-title {
        font-size: 24px;
        font-weight: bold;
        margin: 0 0 20px;
        padding: 15px 0 13px;
        display: block;
        border-bottom: 1px solid #EEE;
        color: #333;
        background: lighten($light-color, 5%);
    }

    .trumbowyg-progress {
        width: 100%;
        background: #F00;
        height: 3px;
        position: absolute;
        top: 58px;

        .trumbowyg-progress-bar {
            background: #2BC06A;
            height: 100%;
            transition: width .15s linear;
        }
    }

    label {
        display: block;
        position: relative;
        margin: 15px 12px;
        height: 27px;
        line-height: 27px;
        overflow: hidden;

        .trumbowyg-input-infos {
            display: block;
            text-align: left;
            height: 25px;
            line-height: 25px;
            transition: all .15;

            span {
                display: block;
                color: darken($light-color, 35%);
                background-color: lighten($light-color, 5%);
                border: 1px solid #DEDEDE;
                padding: 0 2%;
                width: 19.5%;
            }
            span.trumbowyg-msg-error {
                color: #e74c3c;
            }
        }

        &.trumbowyg-input-error {
            input,
            textarea {
                border: 1px solid #e74c3c;
            }

            .trumbowyg-input-infos {
                margin-top: -27px;
            }
        }

        input {
            position: absolute;
            top: 0;
            right: 0;
            height: 25px;
            line-height: 25px;
            border: 1px solid #DEDEDE;
            background: transparent;
            width: 72%;
            padding: 0 2%;
            margin: 0 0 0 23%;
            transition: all .15s;

            &:hover,
            &:focus {
                outline: none;
                border: 1px solid #95a5a6;
            }
            &:focus {
                background: rgba(230, 230, 255, .1);
            }
        }
    }

    .error {
        margin-top: 25px;
        display: block;
        color: red;
    }

    .trumbowyg-modal-button {
        position: absolute;
        bottom: 10px;
        right: 0;
        text-decoration: none;
        color: #FFF;
        display: block;
        width: 100px;
        height: 35px;
        line-height: 33px;
        margin: 0 10px;
        background-color: #333;
        border: none;
        border-top: none;
        cursor: pointer;
        font-family: "Trebuchet MS", Helvetica, Verdana, sans-serif;
        font-size: 16px;
        transition: all .15s;

        $modal-submit-color : #2ecc71;
        &.trumbowyg-modal-submit {
            right: 110px;
            background: darken($modal-submit-color, 3%);

            &:hover,
            &:focus {
                background: lighten($modal-submit-color, 5%);
                outline: none;
            }
            &:active {
                background: darken($modal-submit-color, 10%);
            }
        }

        $modal-reset-color : #EEE;
        &.trumbowyg-modal-reset {
            color: #555;
            background: darken($modal-reset-color, 3%);

            &:hover,
            &:focus {
                background: lighten($modal-reset-color, 5%);
                outline: none;
            }
            &:active {
                background: darken($modal-reset-color, 10%);
            }
        }
    }
}
.trumbowyg-overlay {
    position: absolute;
    background-color: rgba(255, 255, 255, .5);
    width: 100%;
    left: 0;
    display: none;
}


/**
 * Fullscreen
 */
.trumbowyg-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    z-index: 99999;

    &.trumbowyg-box,
    .trumbowyg-editor {
        border: none;
    }
    .trumbowyg-overlay {
        height: 100% !important;
    }
}
/* ... */

